--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,151 +1,57 @@
 @import 'tailwindcss';
-:root {
-  --color-black: oklch(0 0 0);
-  --color-white: oklch(1 0 0);
-  /* ________________________________________________ */
-  /* Primary */
-  --color-primary-10: oklch(0.2189 0.0484 161.5);
-  --color-primary-20: oklch(0.2189 0.0484 161.5);
-  --color-primary-30: oklch(0.3038 0.0608 161.76);
-  --color-primary-40: oklch(0.3895 0.0612 160.88);
-  --color-primary-50: oklch(0.4755 0.0603 160.63);
-  --color-primary-60: oklch(0.6472 0.06 160.28);
-  --color-primary-70: oklch(0.7336 0.0602 160.14);
-  --color-primary-80: oklch(0.8199 0.0621 159.48);
-  --color-primary-90: oklch(0.9056 0.0617 158.75);
-  --color-primary-95: oklch(0.9499 0.0626 158.44);
-  --color-primary-98: oklch(0.9789 0.0319 155.41);
-  /* ________________________________________________ */
-  /* Secondary */
-  --color-secondary-10: oklch(0.223 0.0186 158.15);
-  --color-secondary-20: oklch(0.3096 0.0173 158.88);
-  --color-secondary-30: oklch(0.3944 0.0164 159.25);
-  --color-secondary-40: oklch(0.4817 0.0166 155.2);
-  --color-secondary-50: oklch(0.5678 0.0179 154.19);
-  --color-secondary-60: oklch(0.653 0.0154 155.41);
-  --color-secondary-70: oklch(0.7398 0.0168 154.36);
-  --color-secondary-80: oklch(0.8259 0.0155 151.72);
-  --color-secondary-90: oklch(0.9118 0.0161 148.39);
-  --color-secondary-95: oklch(0.9542 0.0159 148.41);
-  --color-secondary-98: oklch(0.9804 0.0165 151.11);
-  /* ________________________________________________ */
-  /* Tertiary */
-  --color-tertiary-10: oklch(0.2232 0.0256 222.88);
-  --color-tertiary-20: oklch(0.3096 0.0237 223.1);
-  --color-tertiary-30: oklch(0.3943 0.0235 226.37);
-  --color-tertiary-40: oklch(0.481 0.0236 224.71);
-  --color-tertiary-50: oklch(0.5681 0.0228 224.57);
-  --color-tertiary-60: oklch(0.6524 0.0229 227.72);
-  --color-tertiary-70: oklch(0.7401 0.0223 227.64);
-  --color-tertiary-80: oklch(0.8254 0.0217 227.59);
-  --color-tertiary-90: oklch(0.9119 0.0219 230.56);
-  --color-tertiary-95: oklch(0.9562 0.0219 226.13);
-  --color-tertiary-98: oklch(0.9832 0.01 228.88);
-  /* ________________________________________________ */
-  /* Error */
-  --color-error-10: oklch(0.236 0.0962 27.19);
-  --color-error-20: oklch(0.3275 0.1336 27.32);
-  --color-error-30: oklch(0.4171 0.170153 27.3788);
-  --color-error-40: oklch(0.506 0.1927 27.7);
-  --color-error-50: oklch(0.5939 0.2052 27.82);
-  --color-error-60: oklch(0.6795 0.2089 27.72);
-  --color-error-70: oklch(0.7573 0.44 27.06);
-  --color-error-80: oklch(0.8383 0.0891 26.76);
-  --color-error-90: oklch(0.9183 0.40771 25.2259);
-  --color-error-95: oklch(0.9596 0.02 28.9);
-  --color-error-98: oklch(0.9842 0.4076 27.23);
-  /* ________________________________________________ */
-  /* Neutral 36
-  --color-neutral-20: oklch(0.3104 0.0045 145.47);
-  --color-32utral-10: oklch(0.225 0.0024 145.49);
-  --color-neutral-40: oklch(0.3963 0.0036 128.56);
-  --color-28utral-30: oklch(0.4171 0.170153 27.3788);
-  --color-neutral-50: oklch(0.5686 0.003 106.5);
-  --color-24utral-60: oklch(0.656 0.0029 106.48);
-  --color-neutral-70: oklch(0.7406 0.0028 106.47);
-  --color-neutral-80: oklch(0.8268 0.003 84.56);
-  --color-20utral-90: oklch(0.913 0.0029 84.56);
-  --color-neutral-95: oklch(0.9581 0.0041 91.45);
-  --color-neutral-98: oklch(0.9823 0.0029 84.56);
-  /* ________________________________________________ */
-  /* Neutral Variant */
-  --color-neutral-variant-10: oklch(0.225 0.0024 145.49);
-  --color-neutral-variant-20: oklch(0.3104 0.0045 145.47);
-  --color-neutral-variant-30: oklch(0.4171 0.170153 27.3788);
-  --color-neutral-variant-40: oklch(0.3963 0.0036 128.56);
-  --color-neutral-variant-50: oklch(0.5686 0.003 106.5);
-  --color-neutral-variant-60: oklch(0.656 0.0029 106.48);
-  --color-neutral-variant-70: oklch(0.7406 0.0028 106.47);
-  --color-neutral-variant-80: oklch(0.8268 0.003 84.56);
-  --color-neutral-variant-90: oklch(0.913 0.0029 84.56);
-  --color-neutral-variant-95: oklch(0.9581 0.0041 91.45);
-  --color-neutral-variant-98: oklch(0.9823 0.0029 84.56);
+@import '../styles/color-palette.css';
+@import '../styles/theme.css';
+@import '../styles/component-layer.css';
+
+/* Scroll bar styles */
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
 }
 
-@theme {
-  --font-vazir: 'Vazir';
+::-webkit-scrollbar-track {
+  background: transparent;
+}
 
-  --color-primary: var(--color-primary-40);
-  --color-on-primary: var(--color-white);
-  --color-primary-container: var(--color-primary-90);
-  --color-on-primary-container: var(--color-primary-10);
-  --color-primary-fixed: var(--color-primary-90);
-  --color-primary-fixed-dim: var(--color-primary-80);
-  --color-on-primary-fixed: var(--color-primary-10);
-  --color-on-primary-fixed-variant: var(--color-primary-30);
-  --color-secondary: var(--color-secondary-40);
-  --color-on-secondary: var(--color-white);
-  --color-secondary-container: var(--color-secondary-90);
-  --color-on-secondary-container: var(--color-secondary-10);
-  --color-secondary-fixed: var(--color-secondary-90);
-  --color-secondary-fixed-dim: var(--color-secondary-80);
-  --color-on-secondary-fixed: var(--color-secondary-10);
-  --color-on-secondary-fixed-variant: var(--color-secondary-30);
-  --color-tertiary: var(--color-tertiary-40);
-  --color-on-tertiary: var(--color-white);
-  --color-tertiary-container: var(--color-tertiary-90);
-  --color-on-tertiary-container: var(--color-tertiary-10);
-  --color-tertiary-fixed: var(--color-tertiary-90);
-  --color-tertiary-fixed-dim: var(--color-tertiary-80);
-  --color-on-tertiary-fixed: var(--color-tertiary-10);
-  --color-on-tertiary-fixed-variant: var(--color-tertiary-30);
-  --color-error: var(--color-error-40);
-  --color-on-error: var(--color-white);
-  --color-error-container: var(--color-error-90);
-  --color-on-error-container: var(--color-error-10);
-  --color-surface: var(--color-neutral-95);
-  --color-surface-dim: var(--color-neutral-90);
-  --color-surface-bright: var(--color-neutral-98);
-  --color-on-surface: var(--color-neutral-10);
-  --color-outline: var(--color-neutral-50);
+::-webkit-scrollbar-thumb {
+  background-color: rgba(100, 100, 100, 0.5);
+  border-radius: 3px;
+  border: 1px solid transparent;
+}
 
-  --text-display-lg: 57px;
-  --text-display-lg--line-height: 64px;
-  --text-display-md: 45px;
-  --text-display-md--line-height: 52px;
-  --text-display-sm: 36px;
-  --text-display-sm--line-height: 44px;
-  --text-headline-lg: 32px;
-  --text-headline-lg--line-height: 40px;
-  --text-headline-md: 28px;
-  --text-headline-md--line-height: 36px;
-  --text-headline-sm: 24px;
-  --text-headline-sm--line-height: 32;
-  --text-title-lg: 22px;
-  --text-title-lg--line-height: 28px;
-  --text-title-md: 16px;
-  --text-title-md--line-height: 24px;
-  --text-title-sm: 14px;
-  --text-title-sm--line-height: 20px;
-  --text-label-lg: 14px;
-  --text-label-md: 12px;
-  --text-label-md--line-height: 16px;
-  --text-label-sm: 11px;
-  --text-label-sm--line-height: 16px;
-  --text-body-lg: 16px;
-  --text-body-lg--line-height: 24px;
-  --text-body-md: 14px;
-  --text-body-md--line-height: 20px;
-  --text-body-sm: 12px;
-  --text-body-sm--line-height: 16px;
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(100, 100, 100, 0.8);
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(100, 100, 100, 0.5) transparent;
+}
+
+/* --------------------------------- */
+
+/* Showing correct character set in farsi */
+.ss02 {
+  -moz-font-feature-settings: 'ss02';
+  -webkit-font-feature-settings: 'ss02';
+  font-feature-settings: 'ss02';
+}
+
+/* --------------------------------- */
+/* Hides the arrows on number inputs */
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
+/* --------------------------------- */
+
+.preventScroll {
+  overflow: hidden !important;
+  height: 100% !important;
 }
